cmake_minimum_required(VERSION 3.8)
project(module6)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES arrays.cpp)
#set(SOURCE_FILES multiDarray.cpp)
#set(SOURCE_FILES funcArray.cpp)
#set(SOURCE_FILES structArray.cpp)
#set(SOURCE_FILES arrayAsClassMember.cpp)
#set(SOURCE_FILES arraychar.cpp)
#set(SOURCE_FILES copystring.cpp)
#set(SOURCE_FILES string1.cpp)
set(SOURCE_FILES inputOutputString.cpp)







add_executable(module6 ${SOURCE_FILES})